examples/test/testpolicy16799.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16799
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key18: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value26
      podSelector:
        matchLabels:
          key39: value10
          key30: value9
          key3: value47
